syntax = "proto3";
package todo.v1;
option go_package = "grpc-zmq-sse/app/generated-proto-todo";

// import "google/api/annotations.proto";
// import "google/protobuf/timestamp.proto";

service TodoService {
  // rpc CreateTodo(CreateTodoRequest) returns (stream CreateTodoResponse) {}
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}

  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}

  rpc ListTodo(ListTodoRequest) returns (ListTodoResponse) {}

  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {}

  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {}

  // rpc TestTodo(TestTodoRequest) returns (TestTodoResponse) {}
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;

  // @inject_tag: sql:",notnull,default:false"
  bool completed = 4;

  // // @inject_tag: sql:"type:timestamptz,default:now()"
  // google.protobuf.Timestamp created_at = 5;

  // // @inject_tag: sql:"type:timestamptz"
  // google.protobuf.Timestamp updated_at = 6;
}

message CreateTodoRequest {
  Todo activity = 1;
}

// message CreateTodoResponse {
//   string id = 1;
// }

message CreateTodoResponse {
  Todo activity = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo activity = 1;
}

message ListTodoRequest {
  int32 limit = 1;
  bool not_completed = 2;
}

message ListTodoResponse {
  repeated Todo activities = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

// message DeleteTodoResponse {
//   string id = 1;
// }

message DeleteTodoResponse {
  Todo activity = 1;
}

message UpdateTodoRequest {
  Todo activity = 1;
}

// message UpdateTodoResponse {
//   string id = 1;
// }

message UpdateTodoResponse {
  Todo activity = 1;
}